Arreglos visuales de ros info

--- a/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.css
+++ b/Robocol/testapp/src/app/rover/estado/estado-topicos/estado-topicos.component.css
@@ -82,5 +82,10 @@ html {
 #topics
 {
 	background-color: white;
-	color: black;	
+	color: black;
+  height: 100%;
+
+}
+.col-sm{
+  height: 80vh;
 }
