--- a/Robocol/testapp/src/app/rover/fpga/pinout/pinout.component.html
+++ b/Robocol/testapp/src/app/rover/fpga/pinout/pinout.component.html
@@ -1,13 +1,271 @@
 <div class="container">
-	<div class="row">
-		<div class="col" style="color:white">
-			GPIO 0
+	<div class="card border-warning bg-transparent text-center">
+		<div class="card-header text-warning">
+			FPGA pinout
 		</div>
-		<div class="col">
-			<img class="card-img-top" src="/static/assets/FPGA/DE0_Nano_SoC_Front.png" alt="Anemometer img" width="150px"/>
-		</div>
-		<div class="col" style="color:white">
-			GPIO 1
+		<div class="card-body bg-black mt-0 pt-0 px-2 mx-2">
+		    <div class="table-responsive-sm">
+				<div class="row">
+					<div class="col" style="color:white">
+						GPIO 0
+						<br>
+						<br>
+						<table style="width:100%">
+							<tr>
+								<th>40</th>
+								<th>ENA 6</th>
+								<th>39</th>
+								<th>ENA 5</th>
+							</tr>
+							<tr>
+								<th>38</th>
+								<th>ENA 4</th>
+								<th>37</th>
+								<th>ENA 3</th>
+							</tr>
+							<tr>
+								<th>36</th>
+								<th>ENA 2</th>
+								<th>35</th>
+								<th>ENA 1</th>
+							</tr>
+							<tr>
+								<th>34</th>
+								<th>DIR 6_2</th>
+								<th>33</th>
+								<th>DIR 6_1</th>
+							</tr>
+							<tr>
+								<th>32</th>
+								<th>DIR 5_2</th>
+								<th>31</th>
+								<th>DIR 5_1</th>
+							</tr>
+							<tr>
+								<th>30</th>
+								<th>GND</th>
+								<th> </th>
+								<th>29</th>
+							</tr>
+							<tr>
+								<th>28</th>
+								<th>DIR 4_2</th>
+								<th>27</th>
+								<th>DIR 4_1</th>
+							</tr>
+							<tr>
+								<th>26</th>
+								<th>DIR 3_2</th>
+								<th>25</th>
+								<th>DIR 3_1</th>
+							</tr>
+							<tr>
+								<th>24</th>
+								<th>DIR 2_2</th>
+								<th>23</th>
+								<th>DIR 2_1</th>
+							</tr>
+							<tr>
+								<th>22</th>
+								<th>DIR 1_2</th>
+								<th>21</th>
+								<th>DIR 1_1</th>
+							</tr>
+							<tr>
+								<th>20</th>
+								<th>PWM 6</th>
+								<th>19</th>
+								<th>PWM 5</th>
+							</tr>
+							<tr>
+								<th>18</th>
+								<th>PWM 4</th>
+								<th>17</th>
+								<th>PWM 3</th>
+							</tr>
+							<tr>
+								<th>16</th>
+								<th>PWM 2</th>
+								<th>15</th>
+								<th>PWM 1</th>
+							</tr>
+							<tr>
+								<th>14</th>
+								<th>ENC 6 B</th>
+								<th>13</th>
+								<th>ENC 6 A</th>
+							</tr>
+							<tr>
+								<th>12</th>
+								<th>GND</th>
+								<th></th>
+								<th>11</th>
+							</tr>
+							<tr>
+								<th>10</th>
+								<th>ENC 5 B</th>
+								<th> 9</th>
+								<th>ENC 5 A</th>
+							</tr>
+							<tr>
+								<th> 8</th>
+								<th>ENC 4 B</th>
+								<th> 7</th>
+								<th>ENC 4 A</th>
+							</tr>
+							<tr>
+								<th> 6</th>
+								<th>ENC 3 B</th>
+								<th> 5</th>
+								<th>ENC 3 A</th>
+							</tr>
+							<tr>
+								<th> 4</th>
+								<th>ENC 2 B</th>
+								<th> 3</th>
+								<th>ENC 2 A</th>
+							</tr>
+							<tr>
+								<th> 2</th>
+								<th>ENC 1 B</th>
+								<th> 1</th>
+								<th>ENC 1_A</th>
+							</tr>
+						</table>
+					</div>
+					<div class="col">
+						<!-- <img class="card-img-top" src="/static/assets/FPGA/DE0_Nano_SoC_Front.png" alt="Anemometer img" width="150px"/> -->
+						<img class="card-img-top" src="/static/assets/FPGA/DE0_Nano_SoC_Front_2.png" alt="Anemometer img" width="200px"/>
+					</div>
+					<div class="col" style="color:white">
+						GPIO 1
+						<br>
+						<br>
+						<table style="width:100%">
+							<tr>
+								<th> 1</th>
+								<th>XBEE</th>
+								<th> 2</th>
+								<th>SCL</th>
+							</tr>
+							<tr>
+								<th> 3</th>
+								<th>WIFI</th>
+								<th> 4</th>
+								<th>SDA</th>
+							</tr>
+							<tr>
+								<th> 5</th>
+								<th>SRV 1</th>
+								<th> 6</th>
+								<th>SRV 2</th>
+							</tr>
+							<tr>
+								<th> 7</th>
+								<th></th>
+								<th> 8</th>
+								<th></th>
+							</tr>
+							<tr>
+								<th> 9</th>
+								<th>JET 1</th>
+								<th>10</th>
+								<th>JET 2</th>
+							</tr>
+							<tr>
+								<th>11</th>
+								<th> </th>
+								<th>12</th>
+								<th>GND</th>
+							</tr>
+							<tr>
+								<th>13</th>
+								<th>JET 3</th>
+								<th>14</th>
+								<th>JET 4</th>
+							</tr>
+							<tr>
+								<th>15</th>
+								<th>JET 5</th>
+								<th>16</th>
+								<th>JET 6</th>
+							</tr>
+							<tr>
+								<th>17</th>
+								<th>JET 7</th>
+								<th>18</th>
+								<th>JET 8</th>
+							</tr>
+							<tr>
+								<th>19</th>
+								<th>JET 9</th>
+								<th>20</th>
+								<th>JET 10</th>
+							</tr>
+							<tr>
+								<th>21</th>
+								<th>JET 11</th>
+								<th>22</th>
+								<th>JET 12</th>
+							</tr>
+							<tr>
+								<th>23</th>
+								<th>JET 13</th>
+								<th>24</th>
+								<th>JET 14</th>
+							</tr>
+							<tr>
+								<th>25</th>
+								<th>JET 15</th>
+								<th>26</th>
+								<th>JET 16</th>
+							</tr>
+							<tr>
+								<th>27</th>
+								<th>JET 17</th>
+								<th>28</th>
+								<th>JET 18</th>
+							</tr>
+							<tr>
+								<th>29</th>
+								<th> </th>
+								<th>30</th>
+								<th>GND</th>
+							</tr>
+							<tr>
+								<th>31</th>
+								<th>JET 19</th>
+								<th>32</th>
+								<th>JET 20</th>
+							</tr>
+							<tr>
+								<th>33</th>
+								<th>PWR 1</th>
+								<th>34</th>
+								<th>TX</th>
+							</tr>
+							<tr>
+								<th>35</th>
+								<th>PWM 3</th>
+								<th>36</th>
+								<th>RX</th>
+							</tr>
+							<tr>
+								<th>37</th>
+								<th>PWR 5</th>
+								<th>38</th>
+								<th>PWM 6</th>
+							</tr>
+							<tr>
+								<th>39</th>
+								<th>PWM 7</th>
+								<th>40</th>
+								<th>PWM 8</th>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
