--- a/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
@@ -21,10 +21,10 @@
 					</div>
 					<div class="col col-sm-8">
 						<div class="categories">
-							<input disabled id="ph" name="field2" value="Tropical or megathermal."/> <!--  value="{{measurements_value['temp']}}"/> -->
-							<input disabled id="ph" name="field2" value="Alkaline."/> <!-- value="{{measurements_value['ph']}}"/> -->
-							<input disabled id="ph" name="field2" value="Volcanic gases."/> <!-- value="{{measurements_value['c0']}}"/> -->
-							<input disabled id="ph" name="field2" value="Perhumid."/> <!-- value="{{measurements_value['hum']}}"/> -->
+							<input disabled id="temp_db" name="field2" value="Tropical or megathermal."/> <!--  value="{{measurements_value['temp']}}"/> -->
+							<input disabled id="ph_db" name="field2" value="Alkaline."/> <!-- value="{{measurements_value['ph']}}"/> -->
+							<input disabled id="co_db" name="field2" value="Volcanic gases."/> <!-- value="{{measurements_value['c0']}}"/> -->
+							<input disabled id="hum_db" name="field2" value="Perhumid."/> <!-- value="{{measurements_value['hum']}}"/> -->
 							<!-- <pre>	Tropical or megathermal.</pre>
 							<pre>	Alkaline.</pre>
 							<pre>	Volcanic gases.</pre>
