--- a/Robocol/testapp/src/app/rover/fpga/fpga.component.html
+++ b/Robocol/testapp/src/app/rover/fpga/fpga.component.html
@@ -1,12 +1,16 @@
 <div class="container-fluider px-lg-5 ">
-  <div class="row mx-lg-n4 align-items-center">
-    <!-- COLUMN 1 -->
-    <div class="col py-1 px-xl-1 align-self-start">
-      <app-pinout></app-pinout>
-    </div>
-    <!-- COLUMN 2 -->
-    <div class="col py-1 px-xl-1 align-self-start">
-      <app-params></app-params>
-    </div>
-  </div>
+	<br>
+	<br>
+	<div class="row mx-lg-n4 align-items-center">
+		<!-- COLUMN 1 -->
+		<!-- <div class="col py-1 px-xl-1 align-self-start"> -->
+		<div class="col-sm-6">
+			<app-pinout></app-pinout>
+		</div>
+		<!-- COLUMN 2 -->
+		<!-- <div class="col py-1 px-xl-1 align-self-start"> -->
+		<div class="col-sm-6">
+			<app-params></app-params>
+		</div>
+	</div>
 </div>
