--- a/Robocol/testapp/src/app/rover/fpga/params/params.component.css
+++ b/Robocol/testapp/src/app/rover/fpga/params/params.component.css
@@ -26,3 +26,12 @@ th
 	width: 100%;
 	display: inline-block;
 }
+
+.rotateimg180
+{
+  -webkit-transform:rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
