--- a/Robocol/testapp/src/app/rover/fpga/params/params.component.html
+++ b/Robocol/testapp/src/app/rover/fpga/params/params.component.html
@@ -1,31 +1,162 @@
 <div class="container-fluid">
-	<div class="row">
-		<div class="col">
-			<div class="table-responsive">
-				<table class="table table-borderless table-sm">
-					<tr>
-						<th scope="row">
-							Dip Switch:
-							<input disabled id="dip_sw" name="field1" value=""/>
-						</th>
-						<th id="EVA_1_1">
-							LEDs:
-							<input disabled id="leds" name="field2" value="{{measurements_value['ph']}}"/>
-						</th>
-					</tr>
-					<tr>
-						<th scope="row">
-							Prescale:
-							<input id="prescale" name="field3" value="{{lastMessage}}"/>
-							<button (click)="change_value('param','prescale')">Send</button>
-						</th>
-						<th>
-							PWM:
-							<input id="pwm" name="field4" value="{{measurements_value['ph']}}"/>
-							<button (click)="change_value('param','pwm')">Send</button>
-						</th>
-					</tr>
-				</table>
+	<div class="card border-warning bg-transparent text-center">
+		<div class="card-header text-warning">
+			FPGA peripherals
+		</div>
+		<div class="card-body bg-black mt-0 pt-0 px-2 mx-2">
+			<div class="row">
+				<div class="col">
+					<div class="table-responsive">
+						<table class="table table-borderless table-sm">
+							<tr>
+								<th scope="row">
+									<!-- Dip Switch: -->
+									<!-- <input disabled id="dip_sw" name="field1" value=""/> -->
+									<table style="width:50%">
+									<!-- <table> -->
+										<tr>
+											<td style="text-align:center">SW3</td>
+											<th>SW2</th>
+											<th>SW1</th>
+											<th>SW0</th>
+										</tr>
+										<tr>
+											<th><img class="card-img-top" src="/static/assets/FPGA/Switch_up.png" alt="SW3"/></th>
+											<th><img class="card-img-top" src="/static/assets/FPGA/Switch_down.png" alt="SW2"/></th>
+											<th><img class="card-img-top" src="/static/assets/FPGA/Switch_down.png" alt="SW1"/></th>
+											<th><img class="card-img-top" src="/static/assets/FPGA/Switch_down.png" alt="SW0"/></th>
+									</tr>
+									</table>
+								</th>
+								<th id="EVA_1_1">
+									<!-- LEDs: -->
+									<!-- <input disabled id="leds" name="field2" value="{{measurements_value['ph']}}"/> -->
+									<!-- <table style="width:100%"> -->
+									<table class="table table-borderless" style="background-color: transparent;">
+										<div class="img-wrapper">
+											<!-- <img class="img-responsive" src="{{img_src}}"> -->
+											<div class="img-overlay">
+												<tr>
+													<th>LED7</th>
+													<th>LED6</th>
+													<th>LED5</th>
+													<th>LED4</th>
+													<th>LED3</th>
+													<th>LED2</th>
+													<th>LED1</th>
+													<th>LED0</th>
+												</tr>
+												<tr>
+													<th>
+														<button type = "submit" name = "LED7" (click)="led_change(imgs_but[1],7)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED7" width="10px"/> -->
+															<img class="card-img-top" src="{{led7_src}}" alt="LED7"/>
+														</button>
+													</th>
+													<th>
+														<button type = "submit" name = "LED6" (click)="led_change(imgs_but[1],6)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED6" width="10px"/> -->
+															<img class="card-img-top" src="{{led6_src}}" alt="LED6"/>
+														</button>
+													</th>
+													<th>
+														<button type = "submit" name = "LED5" (click)="led_change(imgs_but[1],5)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED5" width="10px"/> -->
+															<img class="card-img-top" src="{{led5_src}}" alt="LED5"/>
+														</button>
+													</th>
+													<th>
+														<button type = "submit" name = "LED4" (click)="led_change(imgs_but[1],4)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED4" width="10px"/> -->
+															<img class="card-img-top" src="{{led4_src}}" alt="LED4"/>
+														</button>
+													</th>
+													<th>
+														<button type = "submit" name = "LED3" (click)="led_change(imgs_but[1],3)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED3" width="10px"/> -->
+															<img class="card-img-top" src="{{led3_src}}" alt="LED3"/>
+														</button>
+													</th>
+													<th>
+														<button type = "submit" name = "LED2" (click)="led_change(imgs_but[1],2)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED2" width="10px"/> -->
+															<img class="card-img-top" src="{{led2_src}}" alt="LED2"/>
+														</button>
+													</th>
+													<th>
+														<button type = "submit" name = "LED1" (click)="led_change(imgs_but[1],1)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED1" width="10px"/> -->
+															<img class="card-img-top" src="{{led1_src}}" alt="LED1"/>
+														</button>
+													</th>
+													<th>
+														<button type = "submit" name = "LED0" (click)="led_change(imgs_but[1],0)" style="background: none">
+															<!-- <img class="card-img-top" src="/static/assets/FPGA/LED_on.png" alt="LED0" width="10px"/> -->
+															<img class="card-img-top" src="{{led0_src}}" alt="LED0"/>
+														</button>
+													</th>
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED7" width="10px"/></th> -->
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED6" width="10px"/></th> -->
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED5" width="10px"/></th> -->
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED4" width="10px"/></th> -->
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED3" width="10px"/></th> -->
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED2" width="10px"/></th> -->
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_off.png" alt="LED1" width="10px"/></th> -->
+													<!-- <th><img class="card-img-top" src="/static/assets/FPGA/LED_on.png" alt="LED0" width="10px"/></th> -->
+												</tr>
+											</div>
+										</div>
+									</table>
+								</th>
+							</tr>
+							<br>
+							<tr>
+								<th scope="row">
+									Prescale:
+									<input id="prescale" name="field3" value="{{lastMessage}}"/>
+									<button (click)="change_value('param','prescale')">Send</button>
+								</th>
+								<!-- <th>
+									PWM:
+									<input id="pwm" name="field4" value="{{measurements_value['ph']}}"/>
+									<button (click)="change_value('param','pwm')">Send</button>
+								</th> -->
+							</tr>
+							<tr>
+								<th scope="row">
+									<div class="slidecontainer">
+										PWM 1:
+										<input type="range" min="0" max="250" value="0" class="slider" id="pwm_range_1">
+										<input disabled type="text" id="pwm_1_inp" name="field4" value="{{pwm_1}}"/>
+									</div>
+								</th>
+								<th>
+									<div class="slidecontainer">
+										PWM 2:
+										<input type="range" min="0" max="250" value="0" class="slider" id="pwm_range_2">
+										<input disabled id="pwm_2_inp" name="field4" value="{{pwm_2}}"/>
+									</div>
+								</th>
+							</tr>
+							<tr>
+								<th scope="row">
+									<div class="slidecontainer">
+										PWM 3:
+										<input type="range" min="0" max="250" value="0" class="slider" id="pwm_range_3">
+										<input disabled id="pwm_3_inp" name="field4" value="{{pwm_3}}"/>
+									</div>
+								</th>
+								<th>
+									<div class="slidecontainer">
+										PWM 4:
+										<input type="range" min="0" max="250" value="0" class="slider" id="pwm_range_4">
+										<input disabled id="pwm_4_inp" name="field4" value="{{pwm_4}}"/>
+									</div>
+								</th>
+							</tr>
+						</table>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
