--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
@@ -5,48 +5,243 @@
 	<div class="card-body bg-black">
 		<div id="EVA" class="container-fluid">
 			<div class="row align-items-center">
-				<div class="col col-lg-12">
+				<div class="col col-lg-6">
 					<div class="row">
-						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E6.1.png" alt="EVA 1 img"/>
-						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E1.1.png" alt="EVA 1 img"/>
+						<div class="col col-lg-6">
+							<button class="text-warning" id="move_but" (click)="eva_mix()">
+								Mix
+							</button>
+						</div>
+						<div class="col col-lg-6">
+							<button class="text-warning" id="move_but" (click)="eva_leave()">
+								Leave
+							</button>
+						</div>
 					</div>
-					<div class="row">
-						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E6.1.png" alt="EVA 1 img"/>
-						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E2.1.png" alt="EVA 2 img"/>
-					</div>
-					<div class="row">
-						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E6.1.png" alt="EVA 1 img"/>
-						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E3.1.png" alt="EVA 3 img" />
-					</div>
-					<div class="row">
-						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E7.1.png" alt="EVA 1 img"/>
-						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E4.1.png" alt="EVA 4 img"/>
-						<img class="card-img-top" id="embudo" src="/static/assets/Sensors/EVA/E8.png" alt="EVA 5 img"/>
-					</div>
-				<!-- </div>
-				<div class="col"> -->
-					<!-- <div class="col-xs-12 text-center"> -->
-					<!-- <div class="row">
-						<img class="card-img-top" src="/static/assets/Sensors/EVA/E1.1.png" alt="EVA 1 img"/>
-					</div>
-					<div class="row">
-						<img class="card-img-top" src="/static/assets/Sensors/EVA/E2.1.png" alt="EVA 2 img"/>
-					</div>
-					<div class="row">
-						<img class="card-img-top" src="/static/assets/Sensors/EVA/E3.1.png" alt="EVA 3 img" />
-					</div>
-					<div class="row">
-						<img class="card-img-top" src="/static/assets/Sensors/EVA/E4.1.png" alt="EVA 4 img"/>
-					</div> -->
 				</div>
-				<!-- <div class="col"> -->
-					
-				<!-- </div> -->
-				<!-- <div class="col col-sm">
+				<div class="col col-lg-6">
 					<div class="row">
-						<img class="card-img-top" id="embudo" src="/static/assets/Sensors/EVA/E8.png" alt="EVA 5 img"/>
+						<div class="col col-lg-6">
+							<button id="move_but" (click)="eva_move('up')">
+								<img class="card-img-top" id="move" src="{{move_up_src}}" alt="EVA 1 img"/>
+							</button>
+						</div>
+						<div class="col col-lg-6">
+							<button id="move_but" (mousedown)="eva_move('down')" (mouseup)="eva_move('stop')">
+								<img class="card-img-top" id="move" src="{{move_down_src}}" alt="EVA 1 img"/>
+							</button>
+						</div>
 					</div>
-				</div> -->
+				</div>
+			</div>
+			<br>
+			<div class="row align-items-center">
+				<div class="col col-lg-6">
+					<div class="row">
+						<div class="col col-lg-4">
+							<button id="status_but" (click)="status_change(status_imgs_but[1],0)">
+								<img class="card-img-top" id="status" src="{{status0_src}}" alt="EVA 1 img"/>
+							</button>
+						</div>
+						<div class="col col-lg-8">
+							<div class="row">
+								<button id="box_but" (click)="eva_move('up')">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box0_0_src}}" alt="EVA 1 img"/>
+										<div class="eva_box0_txt">A1</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box0_1_src}}" alt="EVA 1 img"/>
+										<div class="eva_box0_txt">A2</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box0_2_src}}" alt="EVA 1 img"/>
+										<div class="eva_box0_txt">A3</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box0_3_src}}" alt="EVA 1 img"/>
+										<div class="eva_box0_txt">A4</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box0_4_src}}" alt="EVA 1 img"/>
+										<div class="eva_box0_txt">A5</div>
+									</div>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col col-lg-4">
+							<button id="status_but" (click)="status_change(status_imgs_but[1],1)">
+								<img class="card-img-top" id="status" src="{{status1_src}}" alt="EVA 1 img"/>
+							</button>
+						</div>
+						<div class="col col-lg-8">
+							<div class="row">
+								<button id="box_but" (click)="eva_move('up')">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box1_0_src}}" alt="EVA 1 img"/>
+										<div class="eva_box1_txt">B1</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box1_1_src}}" alt="EVA 1 img"/>
+										<div class="eva_box1_txt">B2</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box1_2_src}}" alt="EVA 1 img"/>
+										<div class="eva_box1_txt">B3</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box1_3_src}}" alt="EVA 1 img"/>
+										<div class="eva_box1_txt">B4</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box1_4_src}}" alt="EVA 1 img"/>
+										<div class="eva_box1_txt">B5</div>
+									</div>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col col-lg-4">
+							<button id="status_but" (click)="status_change(status_imgs_but[1],2)">
+								<img class="card-img-top" id="status" src="{{status2_src}}" alt="EVA 1 img"/>
+							</button>
+						</div>
+						<div class="col col-lg-8">
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box2_0_src}}" alt="EVA 1 img"/>
+										<div class="eva_box2_txt">C1</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box2_1_src}}" alt="EVA 1 img"/>
+										<div class="eva_box2_txt">C2</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box2_2_src}}" alt="EVA 1 img"/>
+										<div class="eva_box2_txt">C3</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box2_3_src}}" alt="EVA 1 img"/>
+										<div class="eva_box2_txt">C4</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box2_4_src}}" alt="EVA 1 img"/>
+										<div class="eva_box2_txt">C5</div>
+									</div>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col col-lg-4">
+							<button id="status_but" (click)="status_change(status_imgs_but[1],3)">
+								<img class="card-img-top" id="status" src="{{status3_src}}" alt="EVA 1 img"/>
+							</button>
+						</div>
+						<div class="col col-lg-8">
+							<div class="row">
+								<button id="box_but" (click)="eva_move('up')">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box3_0_src}}" alt="EVA 1 img"/>
+										<div class="eva_box3_txt">D1</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box3_1_src}}" alt="EVA 1 img"/>
+										<div class="eva_box3_txt">D2</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box3_2_src}}" alt="EVA 1 img"/>
+										<div class="eva_box3_txt">D3</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box3_3_src}}" alt="EVA 1 img"/>
+										<div class="eva_box3_txt">D4</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="box_but">
+									<div class="img_eva_container">
+										<img class="card-img-top" id="box" src="{{box3_4_src}}" alt="EVA 1 img"/>
+										<div class="eva_box3_txt">D5</div>
+									</div>
+								</button>
+							</div>
+							<div class="row">
+								<button id="trash_but">
+									<img class="card-img-top" id="trash" src="{{trash_src}}" alt="EVA 1 img"/>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col col-lg-6">
+					<img class="card-img-top" id="embudo" src="/static/assets/Sensors/EVA/new_imgs/E(13).png" alt="EVA 1 img"/>
+				</div>
 			</div>
 		</div>
 	</div>
