--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-rotacion/brazo-cinematica-inversa-rotacion.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-rotacion/brazo-cinematica-inversa-rotacion.component.html
@@ -1,57 +1,117 @@
-<table class="table table-borderless" style="height: 100%; background-color: transparent;">
-   <tbody>
-      <tr class="justify-content-center text-center align-middle">
-         <td class="justify-content-center text-center align-middle">
-            <div class="img-wrapper">
-               <img class="img-responsive" src="{{imageSrcRoll}}">
-               <div class="img-overlay">
-                  <table class="table table-borderless" style="height: 100%; background-color: transparent;">
-                     <tbody>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageRoll(1, 'CW')" (mouseup)="stop_changing_value()"></button></td>
-                        </tr>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageRoll(2, 'CCW')" (mouseup)="stop_changing_value()"></button></td>
-                        </tr>
-                     </tbody>
-                  </table>
-               </div>
-            </div>
-         </td>
-         <td class="justify-content-center text-center align-middle">
-            <div class="img-wrapper">
-               <img class="img-responsive" src="{{imageSrcYaw}}">
-               <div class="img-overlay">
-                  <table class="table table-borderless" style="height: 100%; background-color: transparent;">
-                     <tbody>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageYaw(1,'CW')" (mouseup)="stop_changing_value()"></button></td>
-                        </tr>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImageYaw(2, 'CCW')" (mouseup)="stop_changing_value()"></button></td>
-                        </tr>
-                     </tbody>
-                  </table>
-               </div>
-            </div>
-         </td>
-         <td class="justify-content-center text-center align-middle">
-            <div class="img-wrapper">
-               <img class="img-responsive" src="{{imageSrcPitch}}">
-               <div class="img-overlay">
-                  <table class="table table-borderless" style="height: 100%; background-color: transparent;">
-                     <tbody>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImagePitch(1,'CW')" (mouseup)="stop_changing_value()"></button></td>
-                        </tr>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="changeImagePitch(2,'CCW')" (mouseup)="stop_changing_value()"></button></td>
-                        </tr>
-                     </tbody>
-                  </table>
-               </div>
-            </div>
-         </td>
-      </tr>
-   </tbody>
+<table
+  class="table table-borderless"
+  style="height: 100%; background-color: transparent"
+>
+  <tbody>
+    <tr class="justify-content-center text-center align-middle">
+      <td class="justify-content-center text-center align-middle">
+        <div class="img-wrapper">
+          <img class="img-responsive" src="{{ imageSrcRoll }}" />
+          <div class="img-overlay">
+            <table
+              class="table table-borderless"
+              style="height: 100%; background-color: transparent"
+            >
+              <tbody>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="changeImage('Roll', 1, 'CW')"
+                      (mouseup)="stop_changing_value('Roll')"
+                    ></button>
+                  </td>
+                </tr>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="changeImage('Roll', 2, 'CCW')"
+                      (mouseup)="stop_changing_value('Roll')"
+                    ></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </td>
+      <td class="justify-content-center text-center align-middle">
+        <div class="img-wrapper">
+          <img class="img-responsive" src="{{ imageSrcPitch }}" />
+          <div class="img-overlay">
+            <table
+              class="table table-borderless"
+              style="height: 100%; background-color: transparent"
+            >
+              <tbody>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="changeImage('Pitch', 1, 'CW')"
+                      (mouseup)="stop_changing_value('Pich')"
+                    ></button>
+                  </td>
+                </tr>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="changeImage('Pitch', 2, 'CCW')"
+                      (mouseup)="stop_changing_value('Pitch')"
+                    ></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </td>
+      <td class="justify-content-center text-center align-middle">
+        <div class="img-wrapper">
+          <img class="img-responsive" src="{{ imageSrcYaw }}" />
+          <div class="img-overlay">
+            <table
+              class="table table-borderless"
+              style="height: 100%; background-color: transparent"
+            >
+              <tbody>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="changeImage('Yaw', 1, 'CW')"
+                      (mouseup)="stop_changing_value('Yaw')"
+                    ></button>
+                  </td>
+                </tr>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="changeImage('Yaw', 2, 'CCW')"
+                      (mouseup)="stop_changing_value('Yaw')"
+                    ></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </td>
+    </tr>
+  </tbody>
 </table>
