--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-vertical/brazo-cinematica-inversa-vertical.component.css
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-vertical/brazo-cinematica-inversa-vertical.component.css
@@ -1,6 +1,6 @@
 .img-wrapper {
   position: relative;
- }
+}
 
 .img-responsive {
   width: 100%;
@@ -17,7 +17,7 @@
 }
 
 .img-overlay:before {
-  content: ' ';
+  content: " ";
   display: block;
   /* adjust 'height' to position overlay content vertically */
   height: 0%;
@@ -30,12 +30,13 @@ button {
   opacity: 0;
 }
 
-td, th{
+td,
+th {
   padding: 0vh;
 }
 
-table { 
+table {
   border-collapse: collapse;
   margin-bottom: 0vh;
   margin-top: 0vh;
-} 
+}
