--- a/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-vertical/brazo-cinematica-inversa-vertical.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-cinematica-inversa-vertical/brazo-cinematica-inversa-vertical.component.html
@@ -1,23 +1,46 @@
-<table class="table table-borderless" style="background-color: transparent;">
-   <tbody>
-      <tr class="justify-content-center text-center align-middle">
-         <td class="justify-content-center text-center align-middle">
-            <div class="img-wrapper">
-               <img class="img-responsive" src="{{imageSrc}}">
-               <div class="img-overlay">
-                  <table class="table table-borderless" style="height: 100%; background-color: transparent;">
-                     <tbody>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class=" td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="change_value(imageButtons[1], 'up')" (mouseup)="stop_changing_value()">UP</button></td>
-                        </tr>
-                        <tr class="justify-content-center text-center align-middle">
-                           <td class="td justify-content-center text-center align-middle"><button class="btn btn-default btn-block" (mousedown)="change_value(imageButtons[2], 'down')" (mouseup)="stop_changing_value()">DOWN</button></td>
-                        </tr>
-                     </tbody>
-                  </table>
-               </div>
-            </div>
-         </td>
-      </tr>
-   </tbody>
+<table class="table table-borderless" style="background-color: transparent">
+  <tbody>
+    <tr class="justify-content-center text-center align-middle">
+      <td class="justify-content-center text-center align-middle">
+        <div class="img-wrapper">
+          <img class="img-responsive" src="{{ imageSrc }}" />
+          <div class="img-overlay">
+            <table
+              class="table table-borderless"
+              style="height: 100%; background-color: transparent"
+            >
+              <tbody>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="change_value(imageButtons[1], 'up')"
+                      (mouseup)="stop_changing_value()"
+                    >
+                      UP
+                    </button>
+                  </td>
+                </tr>
+                <tr class="justify-content-center text-center align-middle">
+                  <td
+                    class="td justify-content-center text-center align-middle"
+                  >
+                    <button
+                      class="btn btn-default btn-block"
+                      (mousedown)="change_value(imageButtons[2], 'down')"
+                      (mouseup)="stop_changing_value()"
+                    >
+                      DOWN
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </td>
+    </tr>
+  </tbody>
 </table>
