conexion con el back del primer boton de la llanta uwu

--- a/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/estado/estado-pestania/estado-pestania.component.html
@@ -28,47 +28,36 @@
           "
           >Temperature<br />0 &degC</label
         >
-
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests">
           <label id="L0_speed">Speed: 0 RPM</label>
           <label id="L0_current">Current: 0 A</label>
-
           <button id="B2" class="button_enabled_motors">Enabled</button>
         </div>
-
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests1">
           <label id="L1_speed"> Speed: 0 RPM</label>
           <label id="L1_current">Current: 0 A</label>
-
           <button id="B1" class="button_enabled_motors">Enabled</button>
         </div>
-
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests2">
           <label id="L2_speed">Speed: 0 RPM</label>
           <label id="L2_current">Current: 0 A</label>
-
           <button id="B0" class="button_enabled_motors">Enabled</button>
         </div>
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests3">
           <label id="R0_speed">Speed: 0 RPM</label>
           <label id="R0_current">Current: 0 A</label>
-
           <button id="B5" class="button_enabled_motors">Enabled</button>
         </div>
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests4">
           <label id="R1_speed">Speed: 0 RPM</label>
           <label id="R1_current">Current: 0 A</label>
-
           <button id="B4" class="button_enabled_motors">Enabled</button>
         </div>
-
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests5">
           <label id="R2_speed">Speed: 0 RPM</label>
           <label id="R2_current">Current: 0 A</label>
-
           <button id="B3" class="button_enabled_motors">Enabled</button>
         </div>
-
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests6">
           <button id="B6" style="margin: 4.5px 0" class="button_enabled_motors">
             Enable All
@@ -116,7 +105,7 @@
           <label id="L0_speed">Speed: 0 RPM</label>
           <label id="L0_current">Current: 0 A</label>
 
-          <button id="B0" class="button_enabled_motors">Enabled</button>
+          <button id="B0" class="button_enabled_motors" (click)="button_wheel(1,'holaaaa')">Enabled</button>
         </div>
         <div class="contenedorPeque card border-warning bg-transparent text-center text-light" id="state_tests1">
           <label id="L1_speed"> Speed: 0 RPM</label>
