--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -30,6 +30,9 @@
             <div class="d-flex justify-content-center align-items-center text-center horizontal">
                <app-brazo-cinematica-inversa-horizontal [brazoService]="brazoService"></app-brazo-cinematica-inversa-horizontal>
             </div>
+            <div class="d-flex justify-content-center align-items-center text-center horizontal" style="margin-right: 2rem;">
+               <app-sistema-extraccion-b [brazoService]="brazoService"></app-sistema-extraccion-b>
+            </div>
          </div>
       </div>
    </div>
