--- a/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/rover/brazo/brazo-pestania/brazo-pestania.component.html
@@ -4,14 +4,14 @@
          <div class="col col-lg-6">
             <div class="d-flex card rounded-0 border-warning bg-transparent justify-content-center align-items-center text-center">
                <div class="d-flex align-items-center card-body bg-black justify-content-center align-items-center text-center">
-                  <img class="img-responsive" src="https://techcrunch.com/wp-content/uploads/2018/03/mrd-sf.gif">
+                  <img class="img-responsive" src="http://localhost:8080/stream?topic=/cam1">
                </div>
             </div>
          </div>
          <div class="col col-lg-6">
             <div class="d-flex card rounded-0 border-warning bg-transparent justify-content-center align-items-center text-center">
                <div class="d-flex align-items-center card-body bg-black justify-content-center align-items-center text-center">
-                  <img class="img-responsive" src="https://techcrunch.com/wp-content/uploads/2018/03/mrd-sf.gif">
+                  <img class="img-responsive" src="http://localhost:8080/stream?topic=/cam1">
                </div>
             </div>
          </div>
